--- a/build.gradle
+++ b/build.gradle
@@ -7,10 +7,11 @@ repositories {
 }
 
 dependencies {
-    testImplementation (
-            "com.codeborne:selenide:6.2.1",
-            "org.junit.jupiter:junit-jupiter-api:5.8.2")
-    testRuntimeOnly "org.junit.jupiter:junit-jupiter-engine:5.8.2"
+    testImplementation(
+            'com.codeborne:selenide:6.2.1',
+            'org.junit.jupiter:junit-jupiter:5.8.2'
+    )
+    testRuntimeOnly('org.junit.jupiter:junit-jupiter-engine:5.8.2')
 }
 
 test {
